apt_key: fix values of state option.

--- a/index.htm
+++ b/index.htm
@@ -1360,7 +1360,7 @@
 									},
 									state: {
 										type: 'choice',
-										choices: ['absent', 'absent'],
+										choices: ['absent', 'present'],
 										required: false,
 										default_value: 'present',
 										description: 'Used to specify if key is being added or revoked'
