--- a/index.htm
+++ b/index.htm
@@ -838,9 +838,40 @@
 							},
 							{
 								name: 'xattr',
-								description: 'Set/retrieve extended attributes',
+								title: 'Set/retrieve extended attributes',
+								description: 'Manages filesystem user defined extended attributes, requires that they are enabled on the target filesystem and that the setfattr/getfattr utilities are present',
+								since_version: '1.3',
 								type: 'core',
 								options: {
+									follow: {
+										type: 'choice',
+										choices: ['yes', 'no'],
+										required: false,
+										default_value: 'yes',
+										description: 'if yes, dereferences symlinks and sets/gets attributes on symlink target, otherwise acts on symlink itself'
+									},
+									key: {
+										type: 'string',
+										required: false,
+										description: 'The name of a specific Extended attribute key to set/retrieve'
+									},
+									name: {
+										type: 'string',
+										required: true,
+										description: 'The full path of the file/object to get the facts of'
+									},
+									state: {
+										type: 'choice',
+										choices: ['read', 'present', 'all', 'keys', 'absent'],
+										required: false,
+										default_value: 'read',
+										description: 'Defines which state you want to do. read retrieves the current value for a key. present sets name to value, default if value is set all dumps all data keys retrieves all keys. absent deletes the key'
+									},
+									value: {
+										type: 'string',
+										required: false,
+										description: "The value to set the named name/key to, it automatically sets the state to 'present'"
+									}
 								}
 							},
 						]
