--- a/index.htm
+++ b/index.htm
@@ -788,9 +788,42 @@
 							},
 							{
 								name: 'fetch',
-								description: 'Fetches a file from remote nodes',
+								title: 'Fetches a file from remote nodes',
+								description: 'This module works like copy, but in reverse. It is used for fetching files from remote machines and storing them locally in a file tree, organized by hostname. Note that this module is written to transfer log files that might not be present, so a missing remote file won’t be an error unless fail_on_missing is set to ‘yes’',
 								type: 'core',
 								options: {
+									dest: {
+										type: 'string',
+										required: true,
+										description: 'A directory to save the file into. For example, if the dest directory is /backup a src file named /etc/profile on host host.example.com, would be saved into /backup/host.example.com/etc/profile'
+									},
+									fail_on_missing: {
+										type: 'choice',
+										choices: ['yes', 'no'],
+										required: false,
+										since_version: '1.1',
+										default_value: 'no',
+										description: 'Makes it fails when the source file is missing'
+									},
+									flat: {
+										type: 'string',
+										required: false,
+										since_version: '1.2',
+										description: "Allows you to override the default behavior of prepending hostname/path/to/file to the destination. If dest ends with '/', it will use the basename of the source file, similar to the copy module. Obviously this is only handy if the filenames are unique"
+									},
+									src: {
+										type: 'string',
+										required: true,
+										description: 'The file on the remote system to fetch. This must be a file, not a directory'
+									},
+									validate_checksum: {
+										type: 'choice',
+										choices: ['yes', 'no'],
+										required: false,
+										since_version: '1.4',
+										default_value: 'yes',
+										description: 'Verify that the source and destination checksums match after the files are fetched'
+									}
 								}
 							},
 							{
